# jugendschutzprogramm

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-test.yml  release.yml
jugendschutzprogramm/: __init__.py  api.py
tests/: test_real_api.py
tests/vcr_cassettes/: test_base_path.yaml  test_full_url.yaml  test_invalid_url.yaml
