[tool.poetry]
name = "jugendschutzprogramm"
version = "0.1.0"
description = "An API Client to query the API of the one and only officially approved sfilter solution in Germany to protect minors from harmful content on the internet."
authors = ["Lilith Wittmann <mail@lilithwittmann.de>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pre-commit = "^3.4.0"
vcrpy = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
